--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Lia's 25th Birthday Party</title>
+    <title>Lia's 25th Birthday Party, You're invited!</title>
+    <meta property="og:title" content="Lia's 25th Birthday Party, You're invited!" />
+    <meta property="og:type" content="video.movie" />
+    <meta property="og:description" content="Invite for Lia's 25th Birthday Party">
+    <meta property="og:image" content="/banner.png" />
+    <meta name="twitter:title" content="Lia's 25th Birthday Party, You're invited!">
+    <meta name="twitter:description" content="Invite for Lia's 25th Birthday Party">
+    <meta name="twitter:image" content="/banner.png">
+    <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
 <div id="root"></div>
